# octoscrape

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
dummies/: scrapers.py
examples/: q2s.py  writer_services.py
octoscrape/: IScraper.py  async_pool.py  config.py  factory.py  interfaces.py  manager.py  mixins.py  multi_runner.py  scraper_config.py  scraper_factory.py  scraper_mixin.py  shell.py
octoscrape/browser_manager/: __init__.py  camoufox.py  interface.py  playwright.py
octoscrape/concurrency/: __init__.py  async_pool.py
octoscrape/config/: __init__.py  accessor.py  common_config_acessor.py  scraper_config_acessor.py
octoscrape/scraper/: __init__.py  factory.py  interfaces.py  mixins.py  multirunner.py
scrapers_examples/: q2s.py  writers_services.py
tests/: conftest.py
tests/browser_manager/: browser_manager_test.py
tests/concurrency/: async_pool_test.py  conftest.py  multi_runner_test.py
tests/config/: common_config_test.py  conftest.py  multi_scraper_config_test.py  scraper_config_test.py
tests/scraper/: conftest.py  factory_test.py  interfaces_test.py  mixin_test.py  mixins_test.py
